[workspace]
resolver = "2"
members = ["bff", "bff-cli", "bff-derive", "bff-gui"]

[workspace.package]
version = "0.1.0"
authors = ["The bff Developers"]
license = "MIT"
repository = "https://github.com/widberg/bff"
edition = "2024"
rust-version = "1.85.0"

[workspace.lints.clippy]
bool_to_int_with_if = "warn"
branches_sharing_code = "warn"
comparison_chain = "warn"
equatable_if_let = "warn"
flat_map_option = "warn"
if_then_some_else_none = "warn"
redundant_type_annotations = "warn"
str_to_string = "warn"
string_to_string = "warn"
use_self = "warn"
used_underscore_binding = "warn"
used_underscore_items = "warn"
useless_let_if_seq = "warn"

[profile.release]
lto = true
codegen-units = 1
panic = "abort"

[profile.dev]
opt-level = 3
debug = 0
