[workspace]
resolver = "2"
members = ["bff", "bff-cli", "bff-derive"]

[workspace.package]
version = "1.1.0"
authors = ["The bff Developers"]
license = "MIT"
repository = "https://github.com/widberg/bff"
edition = "2024"
rust-version = "1.88.0"

[workspace.lints.clippy]
allow_attributes = "warn"
assigning_clones = "warn"
bool_to_int_with_if = "warn"
branches_sharing_code = "warn"
comparison_chain = "warn"
elidable_lifetime_names = "warn"
equatable_if_let = "warn"
flat_map_option = "warn"
if_then_some_else_none = "warn"
implicit_clone = "warn"
manual_midpoint = "warn"
missing_const_for_fn = "warn"
non_std_lazy_statics = "warn"
precedence_bits = "warn"
redundant_test_prefix = "warn"
redundant_type_annotations = "warn"
return_and_then = "warn"
single_option_map = "warn"
str_to_string = "warn"
unnecessary_debug_formatting = "warn"
unnecessary_semicolon = "warn"
unused_trait_names = "warn"
use_self = "warn"
used_underscore_binding = "warn"
used_underscore_items = "warn"
useless_let_if_seq = "warn"

[profile.release]
lto = true
codegen-units = 1
panic = "abort"

[profile.dev]
opt-level = 0
debug = 0
