[package]
name = "bff-cli"
version.workspace = true
authors.workspace = true
license.workspace = true
edition.workspace = true
rust-version.workspace = true

[dependencies]
bff = { path = "../bff" }
clap = { version = "4.2.4", features = ["derive"] }
derive_more = { version = "2.0.1", features = ["full"] }
pathdiff = "0.2.1"
serde_json = "1.0.96"
shadow-rs = "1.1.1"

[build-dependencies]
shadow-rs = "1.1.1"

[lints]
workspace = true
