[package]
name = "bff-cli"
version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
edition.workspace = true
rust-version.workspace = true

[dependencies]
bff = { path = "../bff" }
clap = { version = "4.5.60", features = ["derive"] }
derive_more = { version = "2.0.1", features = ["full"] }
indicatif = "0.18.0"
mimalloc = { version = "0.1.48", features = ["v3"] }
pathdiff = "0.2.1"
rayon = "1.10.0"
schemars = "0.8.21"
serde_json = "1.0.96"
shadow-rs = { version = "1.1.1", default-features = false, features = ["build"] }

[build-dependencies]
shadow-rs = { version = "1.1.1", default-features = false, features = ["build"] }

[lints]
workspace = true
