[package]
name = "bff-gui"
version.workspace = true
authors.workspace = true
edition.workspace = true
rust-version.workspace = true

[dependencies]
bff = { path = "../bff" }
clap = { version = "4.2.4", features = ["derive"] }
derive_more = { version = "2.0.1", features = ["full"] }
eframe = "0.29.1"
egui = "0.29.1" # needs to be old to match three-d
egui_extras = { version = "0.29.1", features = [
    "image",
    "file",
], default-features = false }
hound = "3.5.1"
image = { version = "0.25.5", features = [
    "dds",
    "png",
], default-features = false }
itertools = "0.14.0"
rfd = { version = "0.15.3", features = ["file-handle-inner"] }
rodio = { version = "0.20.1", features = ["wav"], default-features = false }
serde = "1.0.188"
serde_json = "1.0.107"
three-d = { version = "0.18.2", default-features = false, features = [
    "egui_glow",
] }
three-d-asset = "0.9.2"

[target.'cfg(target_os = "windows")'.dependencies]
winreg = "0.55.0"
windows = { version = "0.61.1", features = [
    "Win32_UI_Shell",
], default-features = false }

[target.'cfg(target_os = "windows")'.build-dependencies]
winres = "0.1.12"

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
tokio = { version = "1.33.0", features = ["rt-multi-thread", "time"] }

# https://github.com/rust-lang/cargo/issues/1197
[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen-futures = "0.4"
three-d = { version = "0.18.2", default-features = false, features = [
    "egui_glow",
] }
eframe = { version = "0.29.1", features = ["persistence"] }
async-std = "1.12.0"
web-sys = "0.3.77"

[lints]
workspace = true
