[package]
name = "bff-gui"
version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
edition.workspace = true
rust-version.workspace = true

[package.metadata.cargo-machete]
ignored = ["image"] # Need to depend on image to set the features for egui_extras

[dependencies]
bff = { path = "../bff" }
clap = { version = "4.5.60", features = ["derive"] }
derive_more = { version = "2.0.1", features = ["full"] }
eframe = "0.29.1"
egui = "0.29.1" # needs to be old to match three-d
egui_extras = { version = "0.29.1", features = [
    "image",
    "file",
], default-features = false }
image = { version = "0.25.5", features = [
    "dds",
    "png",
], default-features = false }
itertools = "0.14.0"
regex = "1.11.1"
rfd = { version = "0.17.2", features = ["file-handle-inner"] }
three-d = { version = "0.18.2", default-features = false, features = [
    "egui_glow",
] }
three-d-asset = "0.9.2"

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
mimalloc = { version = "0.1.48", features = ["v3"] }
rodio = { version = "0.22.1", features = ["playback", "hound"], default-features = false }
tokio = { version = "1.44.2", features = ["rt-multi-thread", "time"] }

# https://github.com/rust-lang/cargo/issues/1197
[target.'cfg(target_arch = "wasm32")'.dependencies]
eframe = { version = "0.29.1", features = ["persistence"] }
rodio = { version = "0.22.1", features = ["playback", "hound", "wasm-bindgen"], default-features = false }
three-d = { version = "0.18.2", default-features = false, features = [
    "egui_glow",
] }
wasm-bindgen-futures = "0.4"
web-sys = "0.3.77"

[target.'cfg(target_os = "windows")'.dependencies]
windows = { version = "0.62.2", features = [
    "Win32_Foundation",
    "Win32_System_Registry",
    "Win32_UI_Shell",
], default-features = false }

[target.'cfg(target_os = "windows")'.build-dependencies]
winres = "0.1.12"

[lints]
workspace = true
