[package]
name = "bff"
version.workspace = true
authors.workspace = true
edition.workspace = true
rust-version.workspace = true

[dependencies]
absperf-minilzo-sys = "2.10.0"
arcode = "0.2.4"
bff-derive = { path = "../bff-derive" }
bilge = { git = "https://github.com/widberg/bilge.git", features = [ "serde" ] }
binrw = "0.13.3"
derive_more = "0.99.17"
encoding_rs = "0.8.33"
flate2 = { version = "1.0.28", features = ["zlib-ng"], default-features = false }
impl-trait-for-tuples = "0.2.2"
indexmap = { version = "2.0.0", features = ["serde"] }
itertools = { version = "0.12.0", features = [] }
lz4 = "1.24.0"
num-traits = "0.2.15"
once_cell = { version = "1.18.0", features = [] }
rayon = { version = "1.8.0", features = [] }
scanf = "1.2.1"
serde = { version = "1.0", features = ["derive"] }
serde-big-array = "0.5.1"
string-interner = "0.14.0"
xbadpcm = "0.1.1"

[dev-dependencies]
datatest = "0.8.0"

[lints]
workspace = true
