[package]
name = "bff"
version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
edition.workspace = true
rust-version.workspace = true

[dependencies]
absperf-minilzo-sys = "2.10.0"
arcode = "0.2.4"
bff-derive = { path = "../bff-derive" }
bilge = { git = "https://github.com/widberg/bilge.git", features = [ "serde" ] }
binrw = "0.14.1"
const_power_of_two = "1.0.0"
ddsfile = "0.5.2"
derive_more = { version = "2.0.1", features = ["full"] }
encoding_rs = "0.8.33"
flate2 = { version = "1.0.28", default-features = false }
impl-trait-for-tuples = "0.2.2"
indexmap = { version = "2.0.0", features = ["serde"] }
itertools = { version = "0.14.0", features = [] }
lz4 = "1.24.0"
num-traits = "0.2.15"
once_cell = { version = "1.18.0", features = [] }
rayon = { version = "1.8.0", features = [] }
scanf = "1.2.1"
serde = { version = "1.0", features = ["derive"] }
serde-big-array = "0.5.1"
string-interner = "0.19.0"

# https://github.com/rust-lang/cargo/issues/1197
[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
flate2 = { version = "1.0.28", default-features = false, features = ["zlib-ng"] }

[dev-dependencies]
datatest = "0.8.0"

[lints]
workspace = true
