[package]
name = "bff"
version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
edition.workspace = true
rust-version.workspace = true
autotests = false

[dependencies]
absperf-minilzo-sys = "2.10.0"
arcode = "0.2.4"
bff-derive = { path = "../bff-derive" }
bilge = { git = "https://github.com/widberg/bilge.git", features = ["serde", "schemars"], branch = "schemars" }
binrw = { git = "https://github.com/widberg/binrw.git", branch = "paradiso" }
const_power_of_two = "1.0.0"
ddsfile = { git = "https://github.com/widberg/ddsfile.git", branch = "master" }
derive_aliases = "0.4"
derive_more = { version = "2.0.1", features = ["full"] }
encoding_rs = "0.8.33"
flate2 = "1.1.1"
hound = "3.5.1"
impl-trait-for-tuples = "0.2.2"
indexmap = { version = "2.0.0", features = ["serde"] }
itertools = "0.14.0"
lz4 = "1.24.0"
num-traits = "0.2.15"
pastey = "0.2.1"
petgraph = "0.8.1"
scanf = "2.0.0"
schemars = { version = "0.8.21", features = ["indexmap2"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[dev-dependencies]
datatest = "0.8.0"
mimalloc = { version = "0.1.48", features = ["v3"] }

[[test]]
name = "tests"
path = "tests/tests.rs"

[lints]
workspace = true
