[package]
name = "bff-gui"
version = "0.1.0"
description = "BFF GUI"
authors = ["pizzart"]
license = ""
repository = ""
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.3", features = [] }

[dependencies]
bff = { path = "../../bff" }
tauri = { version = "1.3", features = [
    "fs-read-file",
    "protocol-asset",
    "os-all",
    "path-all",
    "dialog-save",
    "dialog-open",
    "shell-open",
] }
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9.25"
ddsfile = "0.5.1"
image_dds = "0.1.1"
hound = "3.5.0"
quick-xml = { version = "0.30.0", features = ["serialize"] }

[features]
# this feature is used for production builds or when `devPath` points to the filesystem
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
