[package]
name = "bff-gui"
version = "0.1.0"
description = "BFF GUI"
authors = ["pizzart"]
license = ""
repository = ""
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.3", features = [] }

[dependencies]
ansi-to-html = "0.1.3"
base64 = "0.21.4"
bff = { path = "../../bff" }
binrw = "0.12.0"
ddsfile = "0.5.1"
derive_more = "0.99.17"
hound = "3.5.0"
image = "0.24.6"
image_dds = "0.1.1"
quick-xml = { version = "0.30.0", features = ["serialize"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.104"
serde_repr = "0.1.16"
structstruck = "0.4.1"
tauri = { version = "1.3", features = [
    "dialog-message",
    "fs-read-file",
    "protocol-asset",
    "os-all",
    "path-all",
    "dialog-save",
    "dialog-open",
    "shell-open",
] }

[features]
# this feature is used for production builds or when `devPath` points to the filesystem
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
